# MAC0499

./: .gitignore  README.md  log.md
Implementação/: 190429-playing-with-fits.ipynb  190523-dividing-observation-by-telluric-star.ipynb  190626-dtw-test.ipynb  190731-plot-xsl-spectra.ipynb  190813-dtw-on-xsl-spectra.ipynb  190818-tslearn-dtw.ipynb  190903-creating-test-spectra.ipynb  190903-preprocessing-spectra.ipynb  190914-dividing-xsl-spectra-on-smaller-regions.ipynb  190914-dividing-xsl-spectra.ipynb  190919-getting-ground-truth-telluric-spectrum.ipynb  DTW on XSL data.ipynb  Dividing the observation by the telluric star.ipynb  Dynamic Time Warping Test.ipynb  Playing with FITS .ipynb  Plotting X-Shooter spectra.ipynb  utils.py
Monografia/: divisao_capitulos.md  feedback_monografia.md
Pesquisa/: notes.md
Pesquisa/molecfit-1.5.9/: Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
Pesquisa/molecfit-1.5.9/config/: lblrtm_setup
Pesquisa/molecfit-1.5.9/data/: Makefile.am  Makefile.in
Pesquisa/molecfit-1.5.9/data/profiles/lib/: GDAS_t0_s2.atm  GDAS_t0_s3.atm  GDAS_t0_s4.atm  GDAS_t0_s5.atm  GDAS_t0_s6.atm
Pesquisa/molecfit-1.5.9/data/profiles/mipas/: equ.atm
Pesquisa/molecfit-1.5.9/doc/: MF_UM_acronyms.tex  MF_UM_app_cheatsheets.tex  MF_UM_appendix.tex  MF_UM_evaluation.tex  MF_UM_installation.tex  MF_UM_introduction.tex  MF_UM_layout.tex  MF_UM_model.tex  MF_UM_running.tex  MF_UM_shortcut.tex  MF_UM_skipped.tex  Makefile.am  Makefile.in  VLT-MAN-ESO-19550-5928_Molecfit_GUI_and_Tutorial.docx  dmd-doc.sty  eso-logo.eps  molecfit_user_manual.tex  subfiles.mk
Pesquisa/molecfit-1.5.9/doc/figures/: Overview_SM-03_molecfit.eps  cheat_sheet_RT.eps  crires_RT.eps  equ_ngt_4-28mu_rad.eps  equ_ngt_4-28mu_tra.eps  gdas_wdir_height_v.eps  meteomonitor.eps  molecfit_workflow.eps  ngt_equ.eps  profiles.eps  visir3_RT.eps  visir4_RT.eps  xshooter_RT.eps
Pesquisa/molecfit-1.5.9/examples/: Makefile.am  Makefile.in  README  api-calctrans.c  api-input.c  api-input.h  api-molecfit-calctrans.c  api-molecfit-fits.c  api-molecfit-molecfit.c  api-molecfit.c  mf_interface_fits.c  mf_interface_fits.h
Pesquisa/molecfit-1.5.9/examples/CRIRES_4889p5/: Barnard.par.in  Barnard_4889p5.fits  HD134453_4889p5.fits  HD134453_expert.par  HD20010.par.in  HD20010_4889p5.fits  expert_fit.par  gammaGem.par.in  gammaGem_4889p5.fits  gammaGem_4889p5_sky.fits  gammaGem_4889p5_sky.list  gammaGem_sky.par.in
Pesquisa/molecfit-1.5.9/examples/CRIRES_HighSNR/: CRIRES_HighSNR_Science_AM1p475.par.in  CRIRES_HighSNR_Telluric_AM1p472.par.in  Science_AM1p475.fits  Science_AM1p546.fits  Telluric_AM1p472.fits  Telluric_AM1p569.fits
Pesquisa/molecfit-1.5.9/examples/FLAMES/: ngc3603.par.in  ngc3603_mod.fits
Pesquisa/molecfit-1.5.9/examples/KMOS/: N6822_36.fits  N6822_36.par  N6822_40.fits  N6822_40.par.in  N6822_8.fits  N6822_8.par
Pesquisa/molecfit-1.5.9/examples/MUSE/: list  molecfit_5326.par  s04760.fits  s05031.fits  s05314.fits  s05326.fits  s05957.fits  s05970.fits  s06192.fits  s06220.fits  s06484.fits  s09896.fits  s10327.fits  s10445.fits  s10554.fits  s10608.fits  s10714.fits  s10893.fits  s10903.fits  s11052.fits  s11062.fits  s11129.fits  s11272.fits  s4760.fits  s5031.fits  s5314.fits  s5326.fits  s5957.fits  s5970.fits  s6192.fits  s6220.fits  s6484.fits  s9896.fits
Pesquisa/molecfit-1.5.9/examples/SINFONI/: Object1_Jm.fits  sinfoni_j_whole.par
Pesquisa/molecfit-1.5.9/examples/VISIR/: CAL_HD104237_H2S2.fits  CERES_H2S2_mod.fits  HD104237_H2S2.fits  HD104237_H2S2_mod.fits  molecfit_CERES_H2S2.par.in  molecfit_HD104237_H2S2.par
Pesquisa/molecfit-1.5.9/examples/XSHOOTER/: XSHOOTER_NIR_Pipeline_R71.fits  XSHOOTER_NIR_TELL.lis  XSHOOTER_NIR_TELL.lis.in  XSHOOTER_NIR_TELL_MERGE1D.fits  XSHOOTER_VIS_ADP_V1309Sco.fits  XSHOOTER_VIS_ADP_iPTF16abc.fits  XSHOOTER_VIS_HRCar.lis  XSHOOTER_VIS_HRCar.lis.in  XSHOOTER_VIS_HRCar_1.fits  XSHOOTER_VIS_HRCar_2.fits  XSHOOTER_VIS_HRCar_Hip054829_TELL.fits  XSHOOTER_VIS_Pipeline_HIP079048_F9V.fits  XSHOOTER_VIS_Pipeline_R71.fits  molecfit_XSHOOTER_NIR_Pipeline_R71.par.in  molecfit_XSHOOTER_NIR_TELL_2D.par.in  molecfit_XSHOOTER_VIS_ADP_V1309Sco.par  molecfit_XSHOOTER_VIS_ADP_iPTF16abc.par  molecfit_XSHOOTER_VIS_HRCar_TELL.par.in  molecfit_XSHOOTER_VIS_Pipeline_HIP079048_F9V.par  molecfit_XSHOOTER_VIS_Pipeline_R71.par.in
Pesquisa/molecfit-1.5.9/gui/: Makefile.am  Makefile.in  SM02GUI_Buttons.py  SM02GUI_Data.py  SM02GUI_FitKernelDialog.fbp  SM02GUI_FitKernelDialog.py  SM02GUI_Global.py  SM02GUI_Help.py  SM02GUI_Help_Dialog_ToolTip_Texts.py  SM02GUI_Init.py  SM02GUI_LogPopup.py  SM02GUI_Main.py  SM02GUI_Mask.py  SM02GUI_Menu.py  SM02GUI_Paramfile.py  SM02GUI_Plot.py  SM02GUI_Popups.py
Pesquisa/molecfit-1.5.9/m4macros/: cpl.m4  eso.m4
Pesquisa/molecfit-1.5.9/reflex/: Makefile.am  Makefile.in  create_parfile.sh  molecfit_reflex.xml.in
Pesquisa/molecfit-1.5.9/scripts/: install_package.sh  molecfit_installer.run
Pesquisa/molecfit-1.5.9/src/: Makefile.am  Makefile.in  calctrans.c  calctrans_convolution.c  calctrans_lblrtm.c  corrfilelist.c  extract_gdas_profiles.c  mf_atm.c  mf_atm.h  mf_basic.c  mf_basic.h  mf_conv.c  mf_conv.h  mf_corr.c  mf_corr.h  mf_lblrtm.c  mf_lblrtm.h  mf_lib.c  mf_lib.h  mf_lnfl.c  mf_lnfl.h  mf_modsim.c  mf_modsim.h  mf_molecfit.c  mf_molecfit.h  mf_mpfit.c  mf_mpfit.h  mf_par.c  mf_par.h  mf_plot.c  mf_plot.h  mf_readspec.c  mf_readspec.h  mf_trans.c  mf_trans.h  molecfit.c  molecfit.h  mpfit.c  mpfit.h  prepguitable.c  (+1 more)
Pesquisa/molecfit-1.5.9/src/test/: Makefile.am  Makefile.in  test_mf_atm_adaptenv.c  test_mf_atm_readatm.c  test_mf_atm_readgdas.c  test_mf_atm_writeatm.c  test_mf_basic.c  test_mf_par.c  test_mf_plot.c  test_mf_readspec.c
Pesquisa/molecfit-1.5.9/src/test/config/: molecfit_test_crires.par  test_crires.list
Pesquisa/molecfit-1.5.9/src/test/input/: 2009-05-01T06.gdas  GDAS_t0_s1.atm  crires_spec_jitter_extracted_0000.fits  molecfit_test_crires.fits  molecfit_test_crires_fit.atm  molecfit_test_crires_fit.res  molecfit_test_crires_tac.fits
Proposta/: main.tex  proposta.tex  references.bib
(+73 files in other folders)
