

AUTOMAKE_OPTIONS = foreign
DISTCLEANFILES = *.py[oc]

nobase_examples_DATA = \
  CRIRES_4889p5/Barnard_4889p5.fits \
  CRIRES_4889p5/Barnard.par \
  CRIRES_4889p5/Barnard_pix_excl.dat \
  CRIRES_4889p5/Barnard_wl_excl.dat \
  CRIRES_4889p5/Barnard_wl_incl.dat \
  CRIRES_4889p5/expert_fit.par \
  CRIRES_4889p5/gammaGem_4889p5.fits \
  CRIRES_4889p5/gammaGem_4889p5_sky.fits \
  CRIRES_4889p5/gammaGem_4889p5_sky.list \
  CRIRES_4889p5/gammaGem.par \
  CRIRES_4889p5/gammaGem_pix_excl.dat \
  CRIRES_4889p5/gammaGem_sky.par \
  CRIRES_4889p5/gammaGem_wl_excl.dat \
  CRIRES_4889p5/gammaGem_wl_incl.dat \
  CRIRES_4889p5/HD134453_4889p5.fits \
  CRIRES_4889p5/HD134453_expert.par \
  CRIRES_4889p5/HD134453_pix_excl.dat \
  CRIRES_4889p5/HD134453_wl_excl.dat \
  CRIRES_4889p5/HD134453_wl_incl.dat \
  CRIRES_4889p5/HD20010_4889p5.fits \
  CRIRES_4889p5/HD20010.par \
  CRIRES_4889p5/HD20010_pix_excl.dat \
  CRIRES_4889p5/HD20010_wl_excl.dat \
  CRIRES_4889p5/HD20010_wl_incl.dat \
  CRIRES_HighSNR/CRIRES_HighSNR_Science_AM1p475.par \
  CRIRES_HighSNR/CRIRES_HighSNR_Telluric_AM1p472.par \
  CRIRES_HighSNR/exclude_pix.dat \
  CRIRES_HighSNR/exclude_wl.dat \
  CRIRES_HighSNR/include.dat \
  CRIRES_HighSNR/Science_AM1p475.fits \
  CRIRES_HighSNR/Science_AM1p546.fits \
  CRIRES_HighSNR/Telluric_AM1p472.fits \
  CRIRES_HighSNR/Telluric_AM1p569.fits \
  FLAMES/exclude_pix.dat \
  FLAMES/exclude_wl.dat \
  FLAMES/include_wl.dat \
  FLAMES/ngc3603_mod.fits \
  FLAMES/ngc3603.par \
  KMOS/exclude_pix.dat \
  KMOS/exclude_wl.dat \
  KMOS/include.dat \
  KMOS/N6822_36.fits \
  KMOS/N6822_36.par \
  KMOS/N6822_40.fits \
  KMOS/N6822_40.par \
  KMOS/N6822_8.fits \
  KMOS/N6822_8.par \
  MUSE/exclude_p.dat \
  MUSE/exclude_w.dat \
  MUSE/include.dat \
  MUSE/list \
  MUSE/molecfit_5326.par \
  MUSE/s04760.fits \
  MUSE/s05031.fits \
  MUSE/s05314.fits \
  MUSE/s05326.fits \
  MUSE/s05957.fits \
  MUSE/s05970.fits \
  MUSE/s06192.fits \
  MUSE/s06220.fits \
  MUSE/s06484.fits \
  MUSE/s09896.fits \
  MUSE/s10327.fits \
  MUSE/s10445.fits \
  MUSE/s10554.fits \
  MUSE/s10608.fits \
  MUSE/s10714.fits \
  MUSE/s10893.fits \
  MUSE/s10903.fits \
  MUSE/s11052.fits \
  MUSE/s11062.fits \
  MUSE/s11129.fits \
  MUSE/s11272.fits \
  MUSE/s4760.fits \
  MUSE/s5031.fits \
  MUSE/s5314.fits \
  MUSE/s5326.fits \
  MUSE/s5957.fits \
  MUSE/s5970.fits \
  MUSE/s6192.fits \
  MUSE/s6220.fits \
  MUSE/s6484.fits \
  MUSE/s9896.fits \
  SINFONI/exclude_obj_p.dat \
  SINFONI/exclude_obj_w.dat \
  SINFONI/include_obj_w.dat \
  SINFONI/Object1_Jm.fits \
  SINFONI/sinfoni_j_whole.par \
  VISIR/CAL_HD104237_H2S2.fits \
  VISIR/CERES_H2S2_mod.fits \
  VISIR/exclude_ceres_h2s2_p.dat \
  VISIR/exclude_ceres_h2s2_w.dat \
  VISIR/HD104237_H2S2.fits \
  VISIR/HD104237_H2S2_mod.fits \
  VISIR/include_h2s2.dat \
  VISIR/exclude_h2s2_p.dat \
  VISIR/exclude_h2s2_w.dat \
  VISIR/include_ceres_h2s2.dat \
  VISIR/molecfit_CERES_H2S2.par \
  VISIR/molecfit_HD104237_H2S2.par \
  XSHOOTER/molecfit_XSHOOTER_NIR_Pipeline_R71.par \
  XSHOOTER/molecfit_XSHOOTER_NIR_TELL_2D.par \
  XSHOOTER/molecfit_XSHOOTER_VIS_ADP_iPTF16abc.par \
  XSHOOTER/molecfit_XSHOOTER_VIS_ADP_V1309Sco.par \
  XSHOOTER/molecfit_XSHOOTER_VIS_HRCar_TELL.par \
  XSHOOTER/molecfit_XSHOOTER_VIS_Pipeline_HIP079048_F9V.par \
  XSHOOTER/molecfit_XSHOOTER_VIS_Pipeline_R71.par \
  XSHOOTER/XSHOOTER_NIR_Pipeline_R71_exclude_p.dat \
  XSHOOTER/XSHOOTER_NIR_Pipeline_R71.fits \
  XSHOOTER/XSHOOTER_NIR_Pipeline_R71_include.dat \
  XSHOOTER/XSHOOTER_NIR_TELL_exclude_p.dat \
  XSHOOTER/XSHOOTER_NIR_TELL_include.dat \
  XSHOOTER/XSHOOTER_NIR_TELL.lis \
  XSHOOTER/XSHOOTER_NIR_TELL_MERGE1D.fits \
  XSHOOTER/XSHOOTER_NIR_TELL_MERGE2D.fits \
  XSHOOTER/XSHOOTER_VIS_ADP_iPTF16abc.fits \
  XSHOOTER/XSHOOTER_VIS_ADP_iPTF16abc_H2O.dat \
  XSHOOTER/XSHOOTER_VIS_ADP_iPTF16abc_prange_exclude.dat \
  XSHOOTER/XSHOOTER_VIS_ADP_V1309Sco.fits \
  XSHOOTER/XSHOOTER_VIS_ADP_V1309Sco_inclusion_O2_H2O.dat \
  XSHOOTER/XSHOOTER_VIS_ADP_V1309Sco_prange_exclude.dat \
  XSHOOTER/XSHOOTER_VIS_ADP_V1309Sco_wrange_exclude.dat \
  XSHOOTER/XSHOOTER_VIS_HRCar_1.fits \
  XSHOOTER/XSHOOTER_VIS_HRCar_2.fits \
  XSHOOTER/XSHOOTER_VIS_HRCar_exclude_p.dat \
  XSHOOTER/XSHOOTER_VIS_HRCar_exclude_w.dat \
  XSHOOTER/XSHOOTER_VIS_HRCar_Hip054829_TELL.fits \
  XSHOOTER/XSHOOTER_VIS_HRCar_include.dat \
  XSHOOTER/XSHOOTER_VIS_HRCar.lis \
  XSHOOTER/XSHOOTER_VIS_Pipeline_HIP079048_F9V.fits \
  XSHOOTER/XSHOOTER_VIS_Pipeline_HIP079048_F9V_inclusion_O2_H2O.dat \
  XSHOOTER/XSHOOTER_VIS_Pipeline_HIP079048_F9V_wrange_exclusion.dat \
  XSHOOTER/XSHOOTER_VIS_Pipeline_R71_exclude_p.dat \
  XSHOOTER/XSHOOTER_VIS_Pipeline_R71_exclude_w.dat \
  XSHOOTER/XSHOOTER_VIS_Pipeline_R71.fits \
  XSHOOTER/XSHOOTER_VIS_Pipeline_R71_include.dat

AM_CPPFLAGS = $(CPL_INCLUDES) -I$(top_srcdir)/src
AM_LDFLAGS = $(CPL_LDFLAGS)

# link against static variant as most symbols are private
LDADD = $(top_builddir)/src/libmolecfit.la $(LIBCPLCORE) $(LIBCPLUI) $(LIBCPLDFS) $(LIBCPLDRS) $(MATHLIB)

noinst_includedir =
noinst_include_HEADERS = mf_interface_fits.h \
                         api-input.h
                                                  
# C-API test programs
check_PROGRAMS = api-molecfit \
                 api-molecfit-fits \
                 api-calctrans \
                 api-molecfit-molecfit \
                 api-molecfit-calctrans

api_molecfit_SOURCES = api-molecfit.c

api_molecfit_fits_DEPENDENCIES = mf_interface_fits.o

api_molecfit_fits_SOURCES = mf_interface_fits.c \
                            api-molecfit-fits.c

api_calctrans_SOURCES = api-calctrans.c

api_molecfit_molecfit_SOURCES = api-molecfit-molecfit.c \
                                api-input.c

api_molecfit_calctrans_SOURCES = api-molecfit-calctrans.c \
                                 api-input.c

EXTRA_DIST = $(nobase_examples_DATA)

install-data-hook:
	echo "installdatahook_sediopt ${installdatahook_sediopt}"
	find $(DESTDIR)${examplesdir} -name "*.par" -exec sed -i${installdatahook_sediopt} "s|__prefixexamples__|${examplesdir}|g" {} \;
	chmod -R uga+rw $(DESTDIR)$(examplesdir)
	